HTM-1434: Prevent leaking personal data unless TRACE logging is enabled